# essentia

./: Cargo.toml  README.md
crates/essentia-cli/: Cargo.toml
crates/essentia-cli/src/: main.rs
crates/essentia-core/: Cargo.toml
crates/essentia-core/src/: crypto.rs  engine.rs  error.rs  lib.rs  models.rs
crates/essentia-node/: Cargo.toml
crates/essentia-node/src/: main.rs
docs/: API.md  ARCHITECTURE.md  whitepaper.md
examples/bootstrap/: genesis.json  ids.json  node1.json  node2.json  node3.json
examples/bootstrap/keys/: alice.json  attestor1.json  attestor2.json  attestor3.json  validator1.json  validator2.json  validator3.json  vendor.json
scripts/: demo.sh
