[workspace]
members = [
  "crates/essentia-core",
  "crates/essentia-node",
  "crates/essentia-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/SocietyOfRenewal/essentia"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
hex = "0.4"
parking_lot = "0.12"
rand = "0.8"
rand_core = "0.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
